--- a/.github/workflows/daily-commit.yml
+++ b/.github/workflows/daily-commit.yml
@@ -11,7 +11,15 @@ jobs:
     steps:
       - name: Checkout repository
         uses: actions/checkout@v3
+        # ... other parts of your job
         with:
+          # Your change starts here:
+          commit_user_email: 23f2003102@ds.study.iitm.ac.in
+          commit_user_name: 'Daily Commit Bot' # Give the bot a name
+          # Your change ends here
+
+          commit_message: Automated daily commit: ${{ env.DATE }}
+          # other inputs like file_pattern or branch, if present
           token: ${{ secrets.GITHUB_TOKEN }}  # ✅ allows push access
 
       - name: Commit step - {{email}}
