--- a/.github/workflows/daily-commit.yml
+++ b/.github/workflows/daily-commit.yml
@@ -1,27 +1,30 @@
-name: Daily Commit
-
+name: Daily Commit Workflow
 on:
+  workflow_dispatch: # <-- This line allows you to run it manually (Step 7)
   schedule:
-    - cron: '15 4 * * *'
-  workflow_dispatch:
+    # This cron is set to run ~2 minutes from now (UTC)
+    - cron: '58 15 * * *'
+
+# ADDED: This gives the workflow write permissions for the commit
+permissions:
+  contents: write
 
 jobs:
-  commit:
+  daily-commit:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v3
+      - name: Checkout Repository
+        uses: actions/checkout@v4
+        # ADDED: Explicitly checkout the main branch
         with:
-          token: ${{ secrets.GITHUB_TOKEN }}  # ✅ allows push access
+          ref: main 
 
-      - name: Commit step - {{email}}
+      - name: Create Empty Commit
         run: |
-          echo "TDSFU Daily run: $(date -u) TDSFU" >> daily-log.txt
-
-      - name: Git Commit and Push
-        run: |
-          git config user.name "223f2003102"
-          git config user.email "23f2003102@ds.study.iitm.ac.in"
-          git add daily-log.txt
-          git commit -m "Auto commit at $(date -u)" || echo "No changes to commit"
+          git config user.name "GitHub Actions Bot"
+          git config user.email "23f*@ds.study.iitm.ac.in"
+          git commit --allow-empty -m "Daily empty commit"
           git push
+
+      - name: Validation Step for 23f*@ds.study.iitm.ac.in
+        run: echo "This step validates the workflow for the user."
