--- a/.github/workflows/daily-commit.yml
+++ b/.github/workflows/daily-commit.yml
@@ -26,5 +26,5 @@ jobs:
           git commit --allow-empty -m "Daily empty commit"
           git push
 
-      - name: Validation Step for 23f*@ds.study.iitm.ac.in
+      - name: Validation Step for 23f2003102@ds.study.iitm.ac.in
         run: echo "This step validates the workflow for the user."
